# Methods_Of_Solving_Of_Linear_Systems

./: CMakeLists.txt  README.md  filling.cpp  filling.h  interaction.cpp  interaction.h  jacobi_method.cpp  jacobi_method.h  main.cpp  square_root_method.cpp  square_root_method.h
